--- a/styles.css
+++ b/styles.css
@@ -112,4 +112,38 @@
   @media only screen and (max-width: 300px) {
     .text {font-size: 11px}
   }
+
+  /* flipcard */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color:black;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #2980b9;
+    color:black;
+    transform: rotateY(180deg);
+  }
   
