--- a/styles.css
+++ b/styles.css
@@ -114,36 +114,17 @@
   }
 
   /* flipcard */
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  
+  .flip-card {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    height: 300px; /* Should be removed. Only for demonstration */
   }
   
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
   }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-    background-color:black;
-    color: black;
-  }
-  
-  .flip-card-back {
-    background-color: #2980b9;
-    color:black;
-    transform: rotateY(180deg);
-  }
-  
