--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,66 @@
    background-color: #0a126c;
     color: white;
   }
+    
+    .container {
+        margin-top: 50px;
+      }
+      
+      .flip-card {
+        background-color: transparent;
+        width: 100%;
+        height: 400px;
+        perspective: 1000px;
+      }
+      
+      .flip-card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+      }
+      
+      .flip-card:hover .flip-card-inner {
+        transform: rotateY(180deg);
+      }
+      
+      .flip-card-front,
+      .flip-card-back {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        backface-visibility: hidden;
+      }
+      
+      .flip-card-front {
+        background-color: #bbb;
+        color: black;
+      }
+      
+      .flip-card-back {
+        background-color: #2980b9;
+        color: white;
+        transform: rotateY(180deg);
+      }
+      
+      h2 {
+        font-size: 28px;
+        margin-top: 10px;
+        margin-bottom: 20px;
+      }
+      
+      p {
+        font-size: 18px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+      }
+      
+
+
+
+
   .container {
     display: flex;
     flex-wrap: wrap;
@@ -66,7 +126,7 @@
   .text {
     color: #f2f2f2;
     font-size: 15px;
-    padding: 8px 12px;
+    padding: 0;
     position: absolute;
     bottom: 8px;
     width: 100%;
@@ -75,7 +135,7 @@
   
   /* Number text (1/3 etc) */
   .numbertext {
-    color: #f2f2f2;
+    color: #837b7b;
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
@@ -87,14 +147,14 @@
     height: 15px;
     width: 15px;
     margin: 0 2px;
-    background-color: #bbb;
+    background-color: #14213d;
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
   }
   
   .active {
-    background-color: #717171;
+    background-color: #14213d;
   }
   
   /* Fading animation */
