--- a/styles.css
+++ b/styles.css
@@ -64,14 +64,43 @@ header{
     box-sizing: border-box;
   }
   
-  .slideshow-container {
-    max-width: 800px;
-    position: relative;
-    margin: auto;
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
   }
   
-  .mySlides {
-    display: none;
+  #slideshow {
+    width: 100%;
+    height: 400px;
+    position: relative;
+  }
+  
+  .slide {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease;
+  }
+  
+  .slide.active {
+    opacity: 1;
+  }
+  
+  .slide img {
+    display: block;
+    margin: 0 auto;
+    max-height: 80%;
+    max-width: 80%;
+  }
+  
+  .slide h2 {
+    text-align: center;
+    margin-top: 20px;
+    font-size: 36px;
   }
   
   .prev,
