--- a/styles.css
+++ b/styles.css
@@ -393,8 +393,21 @@ textarea {
   height: 150px;
 }
 .Kim{
-  background-color: #4d90fe;
-}
+  background-color: #4d90fe;}
+   .btn {
+    background-color: white;
+    border: 1px solid black;
+    color: black;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
+  .btn.clicked {
+    background-color: yellow;
+  }
+  
+
 input[type="submit"],
 input[type="reset"] {
   background-color: #2980b9;
